# ITERATOR_DESIGN_PATTERN

./: CMakeLists.txt  ProjetTest.vcxproj  ProjetTest.vcxproj.filters  README.md  main.cpp  main.h
x64/Debug/: ProjetTest.exe.recipe  ProjetTest.exp  ProjetTest.lib  ProjetTest.vcxproj.FileListAbsolute.txt
x64/Debug/ProjetTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProjetTest.lastbuildstate  ProjetTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
